Changed so that Java creates URLs for filenames. Under windows the path part of these was incorrectly coming out as c:ilename.sdf rather than c:ilename.sdf (in the URL sense).